--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -43,3 +43,37 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
+.heading {
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 1.2;
+  color: #000000;
+}
+
+.heading--center {
+  text-align: center;
+}
+
+.heading--white {
+  color: #ffffff;
+}
+
+.text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.4;
+  color: #000000;
+}
+
+
+.text--white {
+  color: #ffffff;
+}
+
+.subheading {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.3;
+  color: #000000;
+}
