Added a contact section markup

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,4 +5,8 @@
 @import "header";
 @import "easy-use";
 @import "features";
+@import "technologies";
+@import "stay-focused";
+@import "contact";
+@import "footer";
 
