--- a/src/styles/technologies.scss
+++ b/src/styles/technologies.scss
@@ -1,19 +1,37 @@
 .technology {
   padding-top: 75px;
   padding-bottom: 130px;
+  @include media-tablet {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
 }
 
 .technology__heading {
   margin-bottom: 95px;
+  @include media-tablet {
+    margin-bottom: 50px;
+  }
 }
 
 .technology__list {
   counter-reset: reset;
   @include flex-center;
+  @include media-mobile {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .technology__item {
   counter-increment: reset;
+  width: 190px;
+  @include media-tablet {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
 }
 
 .technology__item::before {
@@ -29,6 +47,12 @@
   height: 55px;
   transform: translate(-95px, 5px);
   margin-bottom: 10px;
+  @include media-tablet {
+    transform: translate(50px, -70px);
+  }
+  @include media-mobile {
+    transform: translate(0px, -70px);
+  }
 }
 
 .technology__text-wrapper {
@@ -36,7 +60,10 @@
   flex-direction: column;
   align-items: center;
   transform: translate(-30px, 0px);
-  width: 190px;
+  width: 100%;
+  @include media-tablet {
+    transform: translate(2px, -80px);
+  }
 }
 
 .technology__item img {
