--- a/src/styles/features.scss
+++ b/src/styles/features.scss
@@ -2,18 +2,38 @@
   padding-top: 75px;
   padding-bottom: 125px;
   background-color: rgba(250, 250, 250, 1);
+  @include media-tablet {
+    padding-top: 50px;
+    padding-bottom: 30px;
+  }
 }
 
 .features__heading {
   margin-bottom: 85px;
+  @include media-tablet {
+    margin-bottom: 50px;
+  }
 }
 
 .features__list {
   @include flex-center;
+  @include media-tablet {
+    gap: 20px;
+  }
+  @include media-mobile {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .features__item {
   width: 350px;
+  @include media-tablet {
+    width: 40%;
+  }
+  @include media-mobile {
+    width: 100%
+  }
 }
 
 .features__image {
@@ -30,6 +50,9 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
+  @include media-tablet {
+    width: 90%;
+  }
 }
 
 .features__subheading {
