--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -42,6 +42,9 @@ body {
   width: 1130px;
   margin-left: auto;
   margin-right: auto;
+  @include media-tablet {
+    width: 80%;
+  }
 }
 
 .heading {
@@ -49,6 +52,9 @@ body {
   font-weight: 600;
   line-height: 1.2;
   color: #000000;
+  @include media-tablet {
+    font-size: 25px;
+  }
 }
 
 .heading--center {
@@ -64,6 +70,9 @@ body {
   font-weight: 400;
   line-height: 1.4;
   color: #000000;
+  @include media-tablet {
+    font-size: 14px;
+  }
 }
 
 
@@ -76,4 +85,7 @@ body {
   font-weight: 700;
   line-height: 1.3;
   color: #000000;
+  @include media-tablet {
+    font-size: 16px;
+  }
 }
