--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -11,6 +11,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  @include media-tablet {
+    padding-top: 50px;
+    padding-bottom: 75px;
+  }
 }
 
 .main-heading {
@@ -21,6 +25,14 @@
   margin-bottom: 70px;
   text-align: center;
   text-transform: uppercase;
+  @include media-tablet {
+    font-size: 50px;
+    margin-bottom: 50px;
+  }
+  @include media-mobile {
+    width: 100%;
+    font-size: 35px;
+  }
 }
 
 
@@ -30,6 +42,9 @@
   line-height: 1.5;
   color: #ffffff;
   margin-bottom: 65px;
+  @include media-mobile {
+    width: 100%;
+  }
 }
 
 .hero-text__button-wrapper {
